tests/baselines/reference/parserExportAssignment4.errors.txt
parserExportAssignment4.ts(1,10): error TS1109: Expression expected.


==== parserExportAssignment4.ts (1 errors) ====
    export = ;
             ~
!!! error TS1109: Expression expected.